--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    {%load static%}
-
+    {% load static %}
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -21,20 +20,18 @@
         <meta property="og:url" content="" />
         <!-- where do you want your post to link to -->
         <meta name="twitter:card" content="summary_large_image" />
-
+        {% block title %}
         <title>Ectopuz</title>
-
+        {% endblock title %}
         <link
             rel="canonical"
             href="https://v5.getbootstrap.com/docs/5.0/examples/carousel/"
         />
-
         <link
             rel="shortcut icon"
-            href="{%static 'img/favicon.png'%}"
+            href="{% static 'img/favicon.png' %}"
             type="image/x-icon"
         />
-
         <!-- Bootstrap core CSS -->
         <link
             rel="stylesheet"
@@ -52,16 +49,24 @@
             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
             crossorigin="anonymous"
         ></script>
-
+        <!-- medium editor -->
+        <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
+        <link
+            rel="stylesheet"
+            href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css"
+            type="text/css"
+            media="screen"
+            charset="utf-8"
+        />
         <!-- Custom styles for this template -->
-        <link href="{%static 'css/carousel.css'%}" rel="stylesheet" />
+        <link href="{% static 'css/carousel.css' %}" rel="stylesheet" />
+        {% block style %} {% endblock style %}
     </head>
-
     <body style="background-color: black" class="text-light">
         <header>
             <nav
                 class="navbar navbar-expand-md navbar-dark fixed-top"
-                style="background-color: #00000088"
+                style="background-color: #000000e1"
             >
                 <div class="container-fluid">
                     <a
@@ -70,7 +75,7 @@
                         href="{% url 'index' %}"
                     >
                         <img
-                            src="{%static 'img/favicon.png'%}"
+                            src="{% static 'img/favicon.png' %}"
                             width="30"
                             height="30"
                             class="d-inline-block align-top"
@@ -91,77 +96,65 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav ml-auto mb-2 mb-md-0">
-                            {% block nav %}{% endblock nav %}
+                            {% block nav %} {% endblock nav %} 
+                            {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <a
+                                    class="nav-link btn-sm text-danger"
+                                    href="{% url 'logout' %}"
+                                    >Logout</a
+                                >
+                            </li>
+                            <li class="nav-item">
+                                <a
+                                    class="nav-link btn-sm text-warning"
+                                    href="#"
+                                    >
+                                    @{{ user.get_username }}
+                                    </a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <div class="nav-link ">
+                                    <a
+                                    class="btn-sm text-success"
+                                    href="{% url 'login' %}"
+                                    >Login</a
+                                >/<a
+                                class="btn-sm text-warning"
+                                href="{% url 'login' %}"
+                                >Sign Up</a>
+                                </div>
+                            </li>
+                            {% endif %}
                         </ul>
                         <span class="mx-2"></span>
-                        <div class="d-flex">
-                            <!-- Button trigger modal -->
-                            <button
-                                type="button"
-                                class="btn btn-dark btn-sm btn-outline-warning"
-                                data-toggle="modal"
-                                data-target="#modelId"
-                            >
-                                Sign Up
-                            </button>
-                        </div>
                     </div>
                 </div>
             </nav>
-            <!-- Modal -->
-            <div
-                class="modal fade"
-                id="modelId"
-                tabindex="-1"
-                role="dialog"
-                aria-labelledby="modelTitleId"
-                aria-hidden="true"
-            >
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">Sign Up</h5>
-                            <button
-                                type="button"
-                                class="close"
-                                data-dismiss="modal"
-                                aria-label="Close"
-                            >
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">Body</div>
-                        <div class="modal-footer">
-                            <button
-                                type="button"
-                                class="btn btn-secondary"
-                                data-dismiss="modal"
-                            >
-                                Close
-                            </button>
-                            <button type="button" class="btn btn-primary">
-                                Save
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </header>
-
         <div style="background-color: black">
             {% block body %} {% endblock body %}
         </div>
         <!-- FOOTER -->
+        {% block footer %}
         <footer class="container static-bottom">
+            {% endblock footer %}
             <br />
             <br />
-            <p class="float-right"><a href="#">Back to top</a></p>
+            <p class="float-right">
+                <a href="#">Back to top</a>
+            </p>
             <p>
-                &copy; <script>document.write(new Date().getFullYear());</script> &middot; Ectopuz Tech 
-                
+                &copy;
+                <script>
+                    document.write(new Date().getFullYear());
+                </script>
+                &middot; Ectopuz Tech
             </p>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="{%static 'js/nav.js'%}"></script>
+        
     </body>
 </html>
