--- a/blog/templates/blog/draft_list.html
+++ b/blog/templates/blog/draft_list.html
@@ -5,52 +5,28 @@
     <a class="nav-link" href="{% url 'index' %}">Home</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link text-warning" href="{% url 'post-list' %}">Blog</a>
+    <a class="nav-link" href="{% url 'post-list' %}">Blog</a>
 </li>
 {% if user.is_authenticated %}
 <li class="nav-item">
-    <a class="nav-link" href="{% url 'stories' %}">Stories</a>
+    <a class="nav-link  text-warning" href="{% url 'post-drafts' %}">Stories</a>
 </li>
 {% endif %}
 <li class="nav-item">
     <a class="nav-link" href="{% url 'contact' %}">Contact</a>
 </li>
-
-
+<li class="nav-item">
+    <a class="nav-link" href="{% url 'login' %}">Login</a>
+</li>
 {% endblock nav %} {% block body %}
-
 <main>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container text-center">
-            <h1 class="display-4 text-warning">Welcome to our blog</h1>
-            <p class="lead">Browse through our stories to find whichever tickles your fancy.</p>
-            <hr class="my-4">
-            
-            {% if user.is_authenticated %}
-            <p class="lead btn-group">
-                <a class="btn btn-warning" href="{%url 'post-form'%}">New Post</a>
-                <a class="btn btn-danger">Search post</a>
-            </p>
-            {% else %}
-            <p class="lead">
-                You must log in to post on this blog
-            </p>
-            
-            <p class="lead btn-group">
-                <a class="btn btn-danger">Search post</a>
-            </p>
-            {% endif %}
-                
-        </div>
-    </div>
     <div class="container">
         <br />
-        <span class="text-right mr-3">Recommended</span>
-        <span>|</span>
-        <span class="text-success ml-3">Following</span>
+        <span class="text-right">Recomme</span>
         <hr class="bg-danger" />
-
-        {% if post_list %} {% for post in post_list %}
+        
+        {% if post_list %}
+        {% for post in post_list %}
         <div class="jumbotron pl-3">
             <div class="row px-3 mx-auto">
                 <div class="col-9">
@@ -65,19 +41,16 @@
                             alt="Avatar"
                             width="4%"
                         />
-                        &nbsp; @{{ post.author }}</a
+                        &nbsp; {{ post.author.name|default:'Anonymous' }}</a
                     >
                     &nbsp; &middot; &nbsp;
-                    <span class="text-danger">{{ post.publish_date|date:'D-M-Y' }}</span>
-                    &nbsp; &middot; &nbsp;
-                    <a type="button" href="{{  post.get_absolute_url  }}" class="btn btn-info btn-sm rounded-pill">
-                        Comment{{ post.approve_comments.count|pluralize }} <span class="badge bg-secondary">{{ post.approve_comments.count|default:'0' }}</span>
-                    </a>
-                    
+                    <span class="text-danger">{{ post.publish_date }}</span>
+
                     <p class="lead" style="font-weight: bolder">
                         <br />
                         <a
-                            href="{{  post.get_absolute_url  }}"
+                            id="headline"
+                            href="{{ post.get_absolute_url }}"
                             class="text-warning img-fluid rounded-circle hd"
                             style="text-decoration: none"
                             >{{ post.title }}</a
@@ -85,7 +58,6 @@
                     </p>
 
                     <p>{{ post.content|truncatewords:50 }}</p>
-                    
                 </div>
 
                 {% if post.image %}
@@ -101,20 +73,17 @@
             </div>
             <hr class="my-2" />
         </div>
-        {% endfor %} {% else %}
+        {% endfor %}
+        {% else %}
         <div class="jumbotron">
             <h1 class="display-4">No Posts</h1>
-            <p class="lead">There are currently no posts</p>
-            <hr class="my-4" />
+            <p class="lead">There are currently no posts </p>
+            <hr class="my-4">
             <p>Click below to be the first to post.</p>
-            <a
-                class="btn btn-danger btn-outline-warning btn-lg"
-                href="{% url 'post-form' %}"
-                role="button"
-                >Post</a
-            >
+            <a class="btn btn-danger btn-outline-warning btn-lg" href="{% url 'post-form' %}" role="button">Post</a>
         </div>
         {% endif %}
+            
     </div>
 </main>
 {% endblock body %}
