--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,39 +1,48 @@
-{% extends 'base.html' %} 
-{% load static %} 
-{% load crispy_forms_tags %} 
-{%block nav %}
+{% extends 'base.html' %} {% load static %} {% block title %}
+<title>Blog</title>
+{% endblock title %} {% load crispy_forms_tags %} {%block nav %}
 <li class="nav-item">
     <a class="nav-link" href="{% url 'index' %}">Home</a>
 </li>
-
 <li class="nav-item">
-    <a class="nav-link text-warning" href="{% url 'blog' %}">Blog</a>
+    <a class="nav-link text-warning" href="{% url 'post-list' %}">Blog</a>
 </li>
+{% if user.is_authenticated %}
+<li class="nav-item">
+    <a class="nav-link" href="{% url 'stories' %}">Stories</a>
+</li>
+{% endif %}
 <li class="nav-item">
     <a class="nav-link" href="{% url 'contact' %}">Contact</a>
 </li>
-<li class="nav-item">
-    <a class="nav-link" href="{% url 'contact' %}">Login</a>
-</li>
-{% endblock nav %} 
-{%block body %}
+
+{% endblock nav %} {%block body %}
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <div class="row">
             <img
-                src="{{post.author.pic.url}}"
+                src="{{ post.author.pic.url }}"
                 class="img-fluid rounded-circle col-1"
                 alt="Avatar"
             />
-            <p class="lead col-2 mt-3" style="font-weight:bold; ">
-                {{post.author.name}} &nbsp; &nbsp;<span class="text-muted">{{post.publish_date}}</span>
+            <p class="lead col-2 mt-3" style="font-weight: bold">
+                @{{ post.author }} &nbsp;<br>
+                
+                {% if post.publish_date %}
+                <span class="text-muted"
+                >{{ post.publish_date }}</span>
+                {% else %}
+                <span class="text-muted"
+                >Draft</span>
+                {% endif %}
+                    
             </p>
         </div>
 
         <hr class="my-4" />
-        <h2><strong>{{post.title}}</strong></h2>
-        <img src="{{post.image.url}}" alt="image" width="100%">
-        <p>{{post.content}}</p>
+        <h2><strong style="font-variant: small-caps;" class="text-warning">{{ post.title}}</strong></h2>
+        <img src="{{ post.image.url }}" alt="image" width="50%" />
+        <p>{{ post.content }}</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Comment</a>
     </div>
 </div>
