--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% load static %} {% block title %}
-<title>Blog</title>
+<title>My Stories</title>
 {% endblock title %} {% load crispy_forms_tags %} {% block nav %}
 <li class="nav-item">
     <a class="nav-link" href="{% url 'index' %}">Home</a>
