--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -20,6 +20,7 @@
 			{% if form.errors %}
             <p class='text-danger'>Your username and password do not match those in the system</p>
             {% endif %}
+
             <form method="post" action="{% url 'login' %}">
 				{% csrf_token %}
 				<div class="form-group">
@@ -27,16 +28,18 @@
 					{{  form.username  }}
 										
 				</div>
-				<br>
+				<br/>
 				<div class="form-group">
 					{{  form.password.label_tag  }}
 					{{  form.password  }}
 				</div>
-				<br>
-				<button type="submit" class="btn btn-primary">Submit</button>
-
+				<br/>
+				
+				<input type="submit" class="btn btn-primary" value="Submit" />
+				<input type="hidden" name="next" value="{{ next }}" />
 			</form>
-			<br>
+			
+			<br/>
 			{% if form.errors %}
             <a href="{% url 'password_reset' %}"><p class='text-warning'>Forgot your password ?</p></a>
             {% endif %}
@@ -44,8 +47,7 @@
 			{% endblock center %}
 				 
 			
-			</p>
-            
+			
             
         </div>
     </div>
