added starring posts

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -59,7 +59,7 @@
             charset="utf-8"
         />
         <!-- favicon -->
-        <link rel="shortcut icon" href="{% static 'img//////'%}" type="image/x-icon">
+        <link rel="shortcut icon" href="{% static 'img/favicon.png'%}" type="image/x-icon">
         <!-- Custom styles for this template -->
         <link href="{% static 'css/carousel.css' %}" rel="stylesheet" />
         {% block style %} {% endblock style %}
@@ -135,7 +135,7 @@
                 </div>
             </nav>
         </header>
-        <div style="background-color: black">
+        <div style="background-color : black">
             {% block body %} {% endblock body %}
         </div>
         <!-- FOOTER -->
