--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -32,92 +32,303 @@
                 <a class="btn btn-warning" href="{%url 'post-form'%}"
                     >New Post</a
                 >
-                <a class="btn btn-success">Search post</a>
+                <a class="btn btn-success" href="{%url 'search-post'%}">Search post</a>
             </p>
             {% else %}
             <p class="lead">You must log in to post on this blog</p>
 
             <p class="lead btn-group">
-                <a class="btn btn-success">Search post</a>
+                <a class="btn btn-success" href="{%url 'search-post'%}">Search post</a>
             </p>
             {% endif %}
         </div>
     </div>
     <div class="container">
         <br />
-        <span class="text-right mr-3">Recommended</span>
-        <span>|</span>
-        <span class="text-success ml-3">Following</span>
-        <hr class="bg-danger" />
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+                <a
+                    class="nav-link active"
+                    id="recommended-tab"
+                    data-toggle="tab"
+                    href="#recommended"
+                    role="tab"
+                    aria-controls="recommended"
+                    aria-selected="true"
+                >
+                    Recommended
+                </a>
+            </li>
 
-        {% if post_list %} {% for post in post_list %}
-        <div class="jumbotron pl-3">
-            <div class="row px-3 mx-auto">
-                <div class="col-9">
-                    <a
-                        href="{{ post.author.get_absolute_url }}"
-                        class="text-light"
-                        style="text-decoration: none"
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a
+                    class="nav-link"
+                    id="following-tab"
+                    data-toggle="tab"
+                    href="#following"
+                    role="tab"
+                    aria-controls="following"
+                    aria-selected="false"
+                >
+                    Following
+                </a>
+            </li>
+            <li class="nav-item">
+                <a
+                    class="nav-link"
+                    id="starred-tab"
+                    data-toggle="tab"
+                    href="#starred"
+                    role="tab"
+                    aria-controls="starred"
+                    aria-selected="false"
+                >
+                    Starred
+                    <span
+                        class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                        >{{starred.count}}</span
                     >
-                        @{{ post.author }}</a
-                    >
-                    &nbsp; &middot; &nbsp;
-                    <span class="text-primary"
-                        >{{ post.publish_date }}</span
-                    >
-                    &nbsp; &middot; &nbsp;
-                    <a
-                        type="button"
-                        href="{{  post.get_absolute_url  }}"
-                        class="btn btn-info btn-sm rounded-pill"
-                    > Starred<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-balloon-heart-fill" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M8.49 10.92C19.412 3.382 11.28-2.387 8 .986 4.719-2.387-3.413 3.382 7.51 10.92l-.234.468a.25.25 0 1 0 .448.224l.04-.08c.009.17.024.315.051.45.068.344.208.622.448 1.102l.013.028c.212.422.182.85.05 1.246-.135.402-.366.751-.534 1.003a.25.25 0 0 0 .416.278l.004-.007c.166-.248.431-.646.588-1.115.16-.479.212-1.051-.076-1.629-.258-.515-.365-.732-.419-1.004a2.376 2.376 0 0 1-.037-.289l.008.017a.25.25 0 1 0 .448-.224l-.235-.468ZM6.726 1.269c-1.167-.61-2.8-.142-3.454 1.135-.237.463-.36 1.08-.202 1.85.055.27.467.197.527-.071.285-1.256 1.177-2.462 2.989-2.528.234-.008.348-.278.14-.386Z"/>
-                      </svg>
-                    </a>
-                    <a
-                        type="button"
-                        href="{{  post.get_absolute_url  }}"
-                        class="btn btn-info btn-sm rounded-pill"
-                    > Star<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-balloon-heart" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="m8 2.42-.717-.737c-1.13-1.161-3.243-.777-4.01.72-.35.685-.451 1.707.236 3.062C4.16 6.753 5.52 8.32 8 10.042c2.479-1.723 3.839-3.29 4.491-4.577.687-1.355.587-2.377.236-3.061-.767-1.498-2.88-1.882-4.01-.721L8 2.42Zm-.49 8.5c-10.78-7.44-3-13.155.359-10.063.045.041.089.084.132.129.043-.045.087-.088.132-.129 3.36-3.092 11.137 2.624.357 10.063l.235.468a.25.25 0 1 1-.448.224l-.008-.017c.008.11.02.202.037.29.054.27.161.488.419 1.003.288.578.235 1.15.076 1.629-.157.469-.422.867-.588 1.115l-.004.007a.25.25 0 1 1-.416-.278c.168-.252.4-.6.533-1.003.133-.396.163-.824-.049-1.246l-.013-.028c-.24-.48-.38-.758-.448-1.102a3.177 3.177 0 0 1-.052-.45l-.04.08a.25.25 0 1 1-.447-.224l.235-.468ZM6.013 2.06c-.649-.18-1.483.083-1.85.798-.131.258-.245.689-.08 1.335.063.244.414.198.487-.043.21-.697.627-1.447 1.359-1.692.217-.073.304-.337.084-.398Z"/>
-                      </svg>
-                    </a>
+                </a>
+            </li>
+            {% endif %}
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div
+                class="tab-pane fade show active"
+                id="recommended"
+                role="tabpanel"
+                aria-labelledby="recommended"
+            >
+                {% if post_list %} 
+                 
+                {% if user.is_authenticated %} 
+                {% for post in not_starred %}
+                
+                <div class="jumbotron pl-3 my-3">
+                    <div class="row px-3 mx-auto">
+                        <div class="col-9">
+                            <a
+                                href="{{ post.author.get_absolute_url }}"
+                                class="text-light"
+                                style="text-decoration: none"
+                            >
+                                @{{ post.author }}</a
+                            >
+                            &nbsp; &middot; &nbsp;
+                            <span class="text-primary"
+                                >{{ post.publish_date }}</span
+                            >
 
-                    <p class="lead" style="font-weight: bolder">
-                        <br />
-                        <a
-                            href="{{  post.get_absolute_url  }}"
-                            class="text-warning img-fluid rounded-circle hd"
-                            style="text-decoration: none"
-                            >{{ post.title }}</a
+                            &nbsp; &middot;
+                            &nbsp;
+                            <a
+                                type="button"
+                                href="{% url 'star-post' pk=post.pk%}"
+                                class="btn btn-info btn-sm rounded-pill"
+                            >
+                                Star<svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="16"
+                                    height="16"
+                                    fill="currentColor"
+                                    class="bi bi-balloon-heart"
+                                    viewBox="0 0 16 16"
+                                >
+                                    <path
+                                        fill-rule="evenodd"
+                                        d="m8 2.42-.717-.737c-1.13-1.161-3.243-.777-4.01.72-.35.685-.451 1.707.236 3.062C4.16 6.753 5.52 8.32 8 10.042c2.479-1.723 3.839-3.29 4.491-4.577.687-1.355.587-2.377.236-3.061-.767-1.498-2.88-1.882-4.01-.721L8 2.42Zm-.49 8.5c-10.78-7.44-3-13.155.359-10.063.045.041.089.084.132.129.043-.045.087-.088.132-.129 3.36-3.092 11.137 2.624.357 10.063l.235.468a.25.25 0 1 1-.448.224l-.008-.017c.008.11.02.202.037.29.054.27.161.488.419 1.003.288.578.235 1.15.076 1.629-.157.469-.422.867-.588 1.115l-.004.007a.25.25 0 1 1-.416-.278c.168-.252.4-.6.533-1.003.133-.396.163-.824-.049-1.246l-.013-.028c-.24-.48-.38-.758-.448-1.102a3.177 3.177 0 0 1-.052-.45l-.04.08a.25.25 0 1 1-.447-.224l.235-.468ZM6.013 2.06c-.649-.18-1.483.083-1.85.798-.131.258-.245.689-.08 1.335.063.244.414.198.487-.043.21-.697.627-1.447 1.359-1.692.217-.073.304-.337.084-.398Z"
+                                    />
+                                </svg>
+                            </a>
+                           
+
+                            <p class="lead" style="font-weight: bolder">
+                                <br />
+                                <a
+                                    href="{{  post.get_absolute_url  }}"
+                                    class="text-warning img-fluid rounded-circle hd"
+                                    style="text-decoration: none"
+                                    >{{ post.title }}</a
+                                >
+                            </p>
+
+                            <p>{{ post.content|truncatewords:50 }}</p>
+                        </div>
+
+                        {% if post.image %}
+                        <div
+                            class="col-3 justify-content-center mx-auto d-none d-lg-block"
                         >
-                    </p>
-
-                    <p>{{ post.content|truncatewords:50 }}</p>
+                            <img
+                                src="{{ post.image.url }}"
+                                class="img-fluid h-100 rounded-top"
+                                alt=""
+                                width="90%"
+                            />
+                        </div>
+                        {% endif %}
+                    </div>
+                    <hr class="my-2" />
                 </div>
 
-                {% if post.image %}
-                <div class="col-3 justify-content-center mx-auto d-lg-block">
-                    <img
-                        src="{{ post.image.url }}"
-                        class="img-fluid h-100 rounded-top"
-                        alt=""
-                        width="90%"
-                    />
+               
+                {%endfor%}
+                {% else %}
+                {% for post in post_list %}
+                <div class="jumbotron pl-3 my-3">
+                    <div class="row px-3 mx-auto">
+                        <div class="col-9">
+                            <a
+                                href="{{ post.author.get_absolute_url }}"
+                                class="text-light"
+                                style="text-decoration: none"
+                            >
+                                @{{ post.author }}</a
+                            >
+                            &nbsp; &middot; &nbsp;
+                            <span class="text-primary"
+                                >{{ post.publish_date }}</span
+                            >
+
+                            <p class="lead" style="font-weight: bolder">
+                                <br />
+                                <a
+                                    href="{{  post.get_absolute_url  }}"
+                                    class="text-warning img-fluid rounded-circle hd"
+                                    style="text-decoration: none"
+                                    >{{ post.title }}</a
+                                >
+                            </p>
+
+                            <p>{{ post.content|truncatewords:50 }}</p>
+                        </div>
+
+                        {% if post.image %}
+                        <div
+                            class="col-3 justify-content-center mx-auto d-none d-lg-block"
+                        >
+                            <img
+                                src="{{ post.image.url }}"
+                                class="img-fluid h-100 rounded-top"
+                                alt=""
+                                width="90%"
+                            />
+                        </div>
+                        {% endif %}
+                    </div>
+                    <hr class="my-2" />
+                </div>
+                {% endfor %}
+                {% endif %}  {% else %}
+                <div class="jumbotron text-center">
+                    <h1 class="display-4">Empty</h1>
+                    <p class="lead">
+                        There are currently no posts in the system
+                    </p>
+                    <hr class="my-4" />
+                    <p>Click above to be the first to post.</p>
                 </div>
                 {% endif %}
             </div>
-            <hr class="my-2" />
+            <div
+                class="tab-pane fade container"
+                id="following"
+                role="tabpanel"
+                aria-labelledby="following"
+            >
+                <div class="jumbotron text-center">
+                    <h1 class="display-4 text-danger mt-5">No Content</h1>
+                    <p class="lead">
+                        You are not following any account at the moment
+                    </p>
+                    <hr class="my-4" />
+                    <p>
+                        Follow people with content you may like below or read
+                        from the recommendations list .
+                    </p>
+                    <a class="btn btn-warning btn-lg" href="#" role="button"
+                        >View Authors</a
+                    >
+                </div>
+            </div>
+            <div
+                class="tab-pane fade"
+                id="starred"
+                role="tabpanel"
+                aria-labelledby="starred"
+            >
+                {% if starred %} {% for post in starred %}
+                <div class="jumbotron pl-3 my-3">
+                    <div class="row px-3 mx-auto">
+                        <div class="col-9">
+                            <a
+                                href="{{ post.author.get_absolute_url }}"
+                                class="text-light"
+                                style="text-decoration: none"
+                            >
+                                @{{ post.post.author }}</a
+                            >
+                            &nbsp; &middot; &nbsp;
+                            <span class="text-primary"
+                                >{{ post.post.publish_date }}</span
+                            >
+
+                            {% if user.is_authenticated %} &nbsp; &middot;
+                            &nbsp; {%if post.post.postinstance_set.all%}
+                            <a
+                                type="button"
+                                href="{% url 'unstar-post' pk=post.post.pk%}"
+                                class="btn btn-info btn-sm rounded-pill"
+                            >
+                                Unstar<svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="16"
+                                    height="16"
+                                    fill="currentColor"
+                                    class="bi bi-balloon-heart-fill"
+                                    viewBox="0 0 16 16"
+                                >
+                                    <path
+                                        fill-rule="evenodd"
+                                        d="M8.49 10.92C19.412 3.382 11.28-2.387 8 .986 4.719-2.387-3.413 3.382 7.51 10.92l-.234.468a.25.25 0 1 0 .448.224l.04-.08c.009.17.024.315.051.45.068.344.208.622.448 1.102l.013.028c.212.422.182.85.05 1.246-.135.402-.366.751-.534 1.003a.25.25 0 0 0 .416.278l.004-.007c.166-.248.431-.646.588-1.115.16-.479.212-1.051-.076-1.629-.258-.515-.365-.732-.419-1.004a2.376 2.376 0 0 1-.037-.289l.008.017a.25.25 0 1 0 .448-.224l-.235-.468ZM6.726 1.269c-1.167-.61-2.8-.142-3.454 1.135-.237.463-.36 1.08-.202 1.85.055.27.467.197.527-.071.285-1.256 1.177-2.462 2.989-2.528.234-.008.348-.278.14-.386Z"
+                                    />
+                                </svg>
+                            </a>
+
+                            {% endif %} {% endif %}
+
+                            <p class="lead" style="font-weight: bolder">
+                                <br />
+                                <a
+                                    href="{{  post.post.get_absolute_url  }}"
+                                    class="text-warning img-fluid rounded-circle hd"
+                                    style="text-decoration: none"
+                                    >{{ post.post.title }}</a
+                                >
+                            </p>
+
+                            <p>{{ post.post.content|truncatewords:50 }}</p>
+                        </div>
+
+                        {% if post.post.image %}
+                        <div
+                            class="col-3 justify-content-center mx-auto d-none d-lg-block"
+                        >
+                            <img
+                                src="{{ post.post.image.url }}"
+                                class="img-fluid h-100 rounded-top"
+                                alt=""
+                                width="90%"
+                            />
+                        </div>
+                        {% endif %}
+                    </div>
+                    <hr class="my-2" />
+                </div>
+                {% endfor %} {% endif %}
+            </div>
         </div>
-        {% endfor %} {% else %}
-        <div class="jumbotron text-center">
-            <h1 class="display-4">Empty</h1>
-            <p class="lead">There are currently no posts in the system</p>
-            <hr class="my-4" />
-            <p>Click above to be the first to post.</p>
-            
-        </div>
-        {% endif %}
     </div>
 </main>
 {% endblock body %}
