fixed stories and added contacts page

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -108,9 +108,10 @@
                                 >
                             </li>
                             <li class="nav-item">
+                                
                                 <a
                                     class="nav-link btn-sm text-warning"
-                                    href="#"
+                                    href="{%url 'profile'%}"
                                     >
                                     @{{ user.get_username }}
                                     </a>
@@ -146,6 +147,9 @@
             <br />
             <p class="float-right">
                 <a href="#">Back to top</a>
+            </p>
+            <p>
+                
             </p>
             <p>
                 &copy;
