--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,7 +13,7 @@
 </li>
 {% endif %}
 <li class="nav-item">
-    <a class="nav-link" href="#contacts">Contact</a>
+    <a class="nav-link" href="{%url 'contact'%}">Contact</a>
 </li>
 
 {% endblock nav %} {% block body %}
@@ -238,14 +238,13 @@
                 aria-labelledby="following"
             >
                 <div class="jumbotron text-center">
-                    <h1 class="display-4 text-danger mt-5">No Content</h1>
+                    <h1 class="display-4 text-danger mt-5">Coming Soon</h1>
                     <p class="lead">
-                        You are not following any account at the moment
+                        This feature is coming soon
                     </p>
                     <hr class="my-4" />
                     <p>
-                        Follow people with content you may like below or read
-                        from the recommendations list .
+                        You'll be able to follow people with content you may like and view a list of authors .
                     </p>
                     <a class="btn btn-warning btn-lg" href="#" role="button"
                         >View Authors</a
