--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,7 +13,7 @@
 </li>
 {% endif %}
 <li class="nav-item">
-    <a class="nav-link" href="#contacts">Contact</a>
+    <a class="nav-link" href="{%url 'contact'%}">Contact</a>
 </li>
 
 {% endblock nav %} {%block body %}
@@ -23,10 +23,7 @@
             
                 <p class="lead  " style="font-weight: bold">
                     @{{ post.author|upper }} &nbsp;<br />
-                    <small class="text-muted">
-                        FOLLOW
-                    </small>
-                    
+                                        
                 </p>
 
         </p>
@@ -69,7 +66,11 @@
                     </div>
                     <br />
                     <button type="submit" class="save btn btn-primary btn-lg">
+                        
                         Comment
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-heart" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M2.965 12.695a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2Zm-.8 3.108.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125ZM8 5.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
+                          </svg>
                     </button>
                 </form>
                 
@@ -86,7 +87,16 @@
                         <p class="lead">{{comment.text}}</p>
                         
                         {% if author %}
-                            
+                        <a
+                        type="button"
+                        href="{% url 'remove-comment' pk=comment.pk %}"
+                        class="btn btn-danger btn-sm rounded-pill mx-auto"
+                    ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash mb-1" viewBox="0 0 16 16">
+                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                      </svg>
+                        Delete Comment
+                    </a>
                         {% endif %}
                             
                         <hr class="my-4"/>
@@ -105,6 +115,7 @@
             
     </div>
     {% else %}
+    {% if author %}
     <div class="mx-auto">
                                 
         <a
@@ -112,6 +123,7 @@
         class="btn btn-success"
         >Publish Post</a
     >
+    {% endif %}
     {% endif %}
     
 </div>
