--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -154,7 +154,7 @@
                         <p>
                             <a
                                 class="btn btn-lg btn-primary btn-outline-danger"
-                                href="#"
+                                href="{%url 'contact'%}"
                                 role="button"
                                 >Hire Me</a
                             >
@@ -266,16 +266,10 @@
                         </div>
                         <div class="modal-footer bg-success">
                             <div class="btn-group">
-                                <button
-                                    type="button"
-                                    class="btn btn-secondary"
-                                    data-dismiss="modal"
-                                >
-                                    Follow
-                                </button>
-                                <button type="button" class="btn btn-primary">
+                                
+                                <a type="button" class="btn btn-primary" href="https://wa.me/qr/HIBTVKUDPSGAL1">
                                     Hire Me
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
