--- a/blog/templates/profile.html
+++ b/blog/templates/profile.html
@@ -24,6 +24,7 @@
 <div class="container">
     <div class="jumbotron jumbotron-fluid">
         <div class="container text-center ">
+            <h1 class="display-3 text-info">My Profile</h1>
             <img src="{{author.pic.url}}" class="img-fluid rounded-circle" alt="" width="100" height="100">
             <h3 class="display-3 text-primary">{{author.user.username}}</h3>
             <p class="lead">
