--- a/blog/templates/profile.html
+++ b/blog/templates/profile.html
@@ -26,8 +26,12 @@
         <div class="container text-center ">
             <h1 class="display-3 text-info">My Profile</h1>
             <img src="{{author.pic.url}}" class="img-fluid rounded-circle" alt="" width="100" height="100">
-            <h3 class="display-3 text-primary">{{author.user.username}}</h3>
+            
             <p class="lead">
+                <div>{{author.user.username|upper}}</div>
+                <br>
+                <div class="mb-4" style="font-family:Arial, Helvetica, sans-serif;">{{author.user.email}}</div>
+                <br>
                 <a class="btn btn-info btn-lg" href="{%url 'stories'%}" role="button">My Posts</a>
             </p>
         </div>
