--- a/blog/templates/sign_up.html
+++ b/blog/templates/sign_up.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load crispy_forms_tags %} {% block body %}
+{% extends "base.html" %}{% load socialaccount %} {% load crispy_forms_tags %} {% block body %}
 <div class="container">
     <div class="jumbotron jumbotron-fluid">
         <div class="container mx-auto justify-content-center text-center">
@@ -10,6 +10,10 @@
             {% else %}
             <h1 class="display-3">Sign Up</h1>
             <p class="lead">Enter your credentials below</p>
+            <p>or</p>
+            <p class="lead">
+                <a type="button" class="btn btn-info" href="{% provider_login_url 'google' %}">Continue with Google</a>
+            </p>
             <hr class="my-2" />
 
             {% if form.errors %}
@@ -23,12 +27,13 @@
                         <div class="container">
                             <div class="container">
                                 <form method="post" enctype="multipart/form-data" >
+                                    {% csrf_token %}
                                     {% for form in form %}
                                     <div class="form-group" width="50%">
                                         {{form|as_crispy_field}}
                                     </div>
                                     {% endfor %}
-                                    {% csrf_token %}
+                                    
                                     <br />
                                     <button
                                         type="submit"
